DMP-4633 Review and resolve sonar issues with the master branch (#2689)