@@ -160,7 +160,7 @@ public class AdminMediaServiceImpl implements AdminMediaService {
         return responseMediaItemList.stream()
             .filter(item -> uniqueIds.add(item.getId()))
             .sorted((o1, o2) -> o2.getCase().getCaseNumber().compareTo(o1.getCase().getCaseNumber()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
